--- a/03_PCs/Characters.html
+++ b/03_PCs/Characters.html
@@ -8,11 +8,11 @@
     <title>Characters</title>
     <link rel="icon"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Ccircle cx='8' cy='8' r='7' fill='%238b5cf6'/%3E%3C/svg%3E" />
-    <link rel="stylesheet" href="/assets/style.css?v=1765662086862" />
-    <link rel="stylesheet" href="/assets/components.css?v=1765662086862" />
-    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765662086862" />
-    <link rel="stylesheet" href="/assets/modal.css?v=1765662086862" />
-    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765662086862" />
+    <link rel="stylesheet" href="/assets/style.css?v=1765662812242" />
+    <link rel="stylesheet" href="/assets/components.css?v=1765662812242" />
+    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765662812242" />
+    <link rel="stylesheet" href="/assets/modal.css?v=1765662812242" />
+    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765662812242" />
     <script>window.SITE_BASE = "/"</script>
 </head>
 
@@ -228,15 +228,15 @@
                     <h4>Choose a color theme:</h4>
                     <div class="theme-list">
                         <div class="theme-card">
-                            <button type="button" class="theme-swatch" data-theme="auburn" title="Auburn">
+                            <button type="button" class="theme-swatch" data-theme="auburn" title="Auburn Linen">
                                 <div class="swatch-preview">
-                                    <span style="background:#642F37"></span>
-                                    <span style="background:#C0350F"></span>
-                                    <span style="background:#F3904B"></span>
-                                    <span style="background:#F7C767"></span>
-                                    <span style="background:#B89DBB"></span>
+                                    <span style="background:#FFFFFF"></span>
+                                    <span style="background:#F6EDEA"></span>
+                                    <span style="background:#8F2D1B"></span>
+                                    <span style="background:#6C4A78"></span>
+                                    <span style="background:#F2D2A5"></span>
                                 </div>
-                                <span class="theme-label">Auburn</span>
+                                <span class="theme-label">Auburn Linen</span>
                             </button>
                         </div>
                         <div class="theme-card">
@@ -291,15 +291,15 @@
                             </button>
                         </div>
                         <div class="theme-card">
-                            <button class="theme-swatch" data-theme="orchid" title="Orchid Whisper">
+                            <button class="theme-swatch" data-theme="orchid" title="Orchid Porcelain">
                                 <div class="swatch-preview">
-                                    <span style="background:#CB438B"></span>
-                                    <span style="background:#BF3556"></span>
-                                    <span style="background:#6C6A43"></span>
-                                    <span style="background:#4D3449"></span>
-                                    <span style="background:#FFF0D2"></span>
+                                    <span style="background:#FFFFFF"></span>
+                                    <span style="background:#F3EAF2"></span>
+                                    <span style="background:#7E2A62"></span>
+                                    <span style="background:#C34A8A"></span>
+                                    <span style="background:#FFE3F1"></span>
                                 </div>
-                                <span class="theme-label">Orchid Whisper</span>
+                                <span class="theme-label">Orchid Porcelain</span>
                             </button>
                         </div>
                         <div class="theme-card">
@@ -341,18 +341,18 @@
     </div>
     <button id="drawerReveal" class="drawer-tab" aria-label="Show tools">Tools</button>
     <script src="/assets/markdown.js"></script>
-    <script src="/assets/right-panel-loader.js?v=1765662086862"></script>
-    <script src="/assets/right-panel.js?v=1765662086862"></script>
-    <script src="/assets/site.js?v=1765662086862"></script>
-    <script src="/assets/favorites.js?v=1765662086862"></script>
-    <script src="/assets/wysiwyg.js?v=1765662086862"></script>
-    <script src="/assets/right-panel-loader.js?v=1765662086862"></script>
-    <script src="/assets/right-panel.js?v=1765662086862"></script>
-    <script src="/assets/keyboard-nav.js?v=1765662086862"></script>
-    <script src="/assets/theme.js?v=1765662086862"></script>
-    <script src="/assets/shortcuts-guide.js?v=1765662086862"></script>
-    <script src="/assets/collapsible-sections.js?v=1765662086862"></script>
-    <script src="/assets/weather.js?v=1765662086862"></script>
+    <script src="/assets/right-panel-loader.js?v=1765662812242"></script>
+    <script src="/assets/right-panel.js?v=1765662812242"></script>
+    <script src="/assets/site.js?v=1765662812242"></script>
+    <script src="/assets/favorites.js?v=1765662812242"></script>
+    <script src="/assets/wysiwyg.js?v=1765662812242"></script>
+    <script src="/assets/right-panel-loader.js?v=1765662812242"></script>
+    <script src="/assets/right-panel.js?v=1765662812242"></script>
+    <script src="/assets/keyboard-nav.js?v=1765662812242"></script>
+    <script src="/assets/theme.js?v=1765662812242"></script>
+    <script src="/assets/shortcuts-guide.js?v=1765662812242"></script>
+    <script src="/assets/collapsible-sections.js?v=1765662812242"></script>
+    <script src="/assets/weather.js?v=1765662812242"></script>
     
     <!-- Footer Partial: Add site-wide footer content here if needed -->
 <footer class="footer">
