--- a/2025-12-04.html
+++ b/2025-12-04.html
@@ -8,11 +8,11 @@
     <title>2025-12-04</title>
     <link rel="icon"
         href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Ccircle cx='8' cy='8' r='7' fill='%238b5cf6'/%3E%3C/svg%3E" />
-    <link rel="stylesheet" href="/assets/style.css?v=1765700766684" />
-    <link rel="stylesheet" href="/assets/components.css?v=1765700766684" />
-    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765700766684" />
-    <link rel="stylesheet" href="/assets/modal.css?v=1765700766684" />
-    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765700766684" />
+    <link rel="stylesheet" href="/assets/style.css?v=1765701506365" />
+    <link rel="stylesheet" href="/assets/components.css?v=1765701506365" />
+    <link rel="stylesheet" href="/assets/enhanced-todo.css?v=1765701506365" />
+    <link rel="stylesheet" href="/assets/modal.css?v=1765701506365" />
+    <link rel="stylesheet" href="/assets/landing-pages.css?v=1765701506365" />
     <script>window.SITE_BASE = "/"</script>
 </head>
 
@@ -309,7 +309,7 @@
                                     <span style="background:#9792CB"></span>
                                     <span style="background:#AA74A0"></span>
                                     <span style="background:#E2C99E"></span>
-                                    <span style="background:#8527736"></span>
+                                    <span style="background:#852773"></span>
                                 </div>
                                 <span class="theme-label">Chinese Pearls</span>
                             </button>
@@ -341,18 +341,18 @@
     </div>
     <button id="drawerReveal" class="drawer-tab" aria-label="Show tools">Tools</button>
     <script src="/assets/markdown.js"></script>
-    <script src="/assets/right-panel-loader.js?v=1765700766684"></script>
-    <script src="/assets/right-panel.js?v=1765700766684"></script>
-    <script src="/assets/site.js?v=1765700766684"></script>
-    <script src="/assets/favorites.js?v=1765700766684"></script>
-    <script src="/assets/wysiwyg.js?v=1765700766684"></script>
-    <script src="/assets/right-panel-loader.js?v=1765700766684"></script>
-    <script src="/assets/right-panel.js?v=1765700766684"></script>
-    <script src="/assets/keyboard-nav.js?v=1765700766684"></script>
-    <script src="/assets/theme.js?v=1765700766684"></script>
-    <script src="/assets/shortcuts-guide.js?v=1765700766684"></script>
-    <script src="/assets/collapsible-sections.js?v=1765700766684"></script>
-    <script src="/assets/weather.js?v=1765700766684"></script>
+    <script src="/assets/right-panel-loader.js?v=1765701506365"></script>
+    <script src="/assets/right-panel.js?v=1765701506365"></script>
+    <script src="/assets/site.js?v=1765701506365"></script>
+    <script src="/assets/favorites.js?v=1765701506365"></script>
+    <script src="/assets/wysiwyg.js?v=1765701506365"></script>
+    <script src="/assets/right-panel-loader.js?v=1765701506365"></script>
+    <script src="/assets/right-panel.js?v=1765701506365"></script>
+    <script src="/assets/keyboard-nav.js?v=1765701506365"></script>
+    <script src="/assets/theme.js?v=1765701506365"></script>
+    <script src="/assets/shortcuts-guide.js?v=1765701506365"></script>
+    <script src="/assets/collapsible-sections.js?v=1765701506365"></script>
+    <script src="/assets/weather.js?v=1765701506365"></script>
     
     <!-- Footer Partial: Add site-wide footer content here if needed -->
 <footer class="footer">
